--- a/ad.html
+++ b/ad.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src='//whephiwums.com/sdk.js' data-zone='8859968' data-sdk='show_8859968'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ad Page</title>
 </head>
 <body>
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            show_8859968("preload")
-                .then(() => {
-                    console.log("Ad is ready inside iframe");
-                    show_8859968("inline"); // Load the ad inside the iframe
-                })
-                .catch((error) => {
-                    console.error("Failed to preload ad:", error);
-                });
+      document.addEventListener("DOMContentLoaded", () => {
+  show_8859968("preload")
+    .then(() => {
+      console.log("Ad is ready");
+      show_8859968("pop"); // Open browser with an ad
+    })
+    .catch((error) => {
+      console.error("Failed to preload ad:", error);
+    });
+});
         });
     </script>
 </body>
