--- a/ad.html
+++ b/ad.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src='//whephiwums.com/sdk.js' data-zone='8859968' data-sdk='show_8859968'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad Page</title>
+    <title>Auto Open URL</title>
+    <script>
+        window.onload = function() {
+            window.location.href = "https://joohugreene.net/4/8932236"; // Change this to your desired URL
+        };
+    </script>
 </head>
 <body>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-  show_8859968("preload")
-    .then(() => {
-      console.log("Ad is ready");
-      show_8859968("pop"); // Open browser with an ad
-    })
-    .catch((error) => {
-      console.error("Failed to preload ad:", error);
-    });
-});
-        });
-    </script>
+    <p>If the page doesn't redirect, <a href="https://example.com">click here</a>.</p>
 </body>
 </html>
