--- a/ad.html
+++ b/ad.html
@@ -11,6 +11,6 @@
     </script>
 </head>
 <body>
-    <p>If the page doesn't redirect, <a href="https://example.com">click here</a>.</p>
+    <p>If the page doesn't redirect, <a href="https://joohugreene.net/4/8932236">click here</a>.</p>
 </body>
 </html>
