--- a/ad.html
+++ b/ad.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto Open URL</title>
+    <title>Ad Page</title>
+</head>
+<body>
     <script>
-        window.onload = function() {
+    window.onload = function() {
             window.location.href = "https://joohugreene.net/4/8932236"; // Change this to your desired URL
         };
     </script>
-</head>
-<body>
-    <p>If the page doesn't redirect, <a href="https://joohugreene.net/4/8932236">click here</a>.</p>
 </body>
 </html>
